--- a/.github/workflows/ManualBuildOnly.yml
+++ b/.github/workflows/ManualBuildOnly.yml
@@ -5,17 +5,27 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
+
     - name: Restore dependencies
       run: dotnet restore ./src/MinVer.Example/MinVer.Example.csproj
+
     - name: Build
       run: dotnet build --no-restore --configuration Release ./src/MinVer.Example/MinVer.Example.csproj
+
     - name: Test
       run: dotnet test --no-build --verbosity normal ./src/MinVer.Example/MinVer.Example.csproj
+
+    - name: Push
+      run : |
+            dotnet nuget add source --username ${{ github.repository_owner }} --password ${{secrets.GITHUB_TOKEN}} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json"
+            dotnet nuget push "./src/**/*.nupkg" --api-key ${{ secrets.GITHUB_TOKEN }} --source "github" --skip-duplicate
