--- a/src/MinVer.Example/MinVer.Example.csproj
+++ b/src/MinVer.Example/MinVer.Example.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
         <Description>Example of a Howto build DotNet packages using MinVer, Github Actions and nuget.org</Description>
@@ -8,6 +8,7 @@
         <PackageId>MinVer.Example</PackageId>
         <PackageTags>minver nuget github</PackageTags>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
+			  <RepositoryUrl>https://github.com/DmytroKontsevoy/MinVerExample</RepositoryUrl>
         <PackageProjectUrl>https://github.com/DmytroKontsevoy/MinVerExample</PackageProjectUrl>
         <PackageReleaseNotes>https://github.com/DmytroKontsevoy/MinVerExample/releases</PackageReleaseNotes>
         <PublishRepositoryUrl>false</PublishRepositoryUrl>
