--- a/src/MinVer.Example/MinVer.Example.csproj
+++ b/src/MinVer.Example/MinVer.Example.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
         <Description>Example of a Howto build DotNet packages using MinVer, Github Actions and nuget.org</Description>
@@ -8,9 +8,10 @@
         <PackageId>MinVer.Example</PackageId>
         <PackageTags>minver nuget github</PackageTags>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
-        <PackageProjectUrl>https://github.com/Kurpanik/MinVerExample</PackageProjectUrl>
-        <PackageReleaseNotes>https://github.com/Kurpanik/MinVerExample/releases</PackageReleaseNotes>
-        <PublishRepositoryUrl>true</PublishRepositoryUrl>
+			  <RepositoryUrl>https://github.com/DmytroKontsevoy/MinVerExample</RepositoryUrl>
+        <PackageProjectUrl>https://github.com/DmytroKontsevoy/MinVerExample</PackageProjectUrl>
+        <PackageReleaseNotes>https://github.com/DmytroKontsevoy/MinVerExample/releases</PackageReleaseNotes>
+        <PublishRepositoryUrl>false</PublishRepositoryUrl>
         <DebugSymbols>true</DebugSymbols>
         <DebugType>portable</DebugType>
         <!--Embed PDBs instead of prtable, AllowedOutputExtensionsInPackageBuildOutputFolder can be skipped then: -->
